--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -205,3 +205,28 @@ margin-right: 10px;
     font-size: 1.5rem;
   }
 }
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid transparent;
+  border-radius: .25rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+}
+.main-body{
+  display: flex;
+  justify-items: auto;
+  align-items: center;
+  margin: auto;
+  padding: 20px;
+  height: 100vh;
+}
+.me-2 {
+  margin-right: .5rem!important;
+}
