--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,7 +16,15 @@
   --white-color:#ffffff;
   --black-color:#1a1a1a;
   --black-color-10:rgba(0, 0, 0, 0.1);
-  --main-bg-color: #93AEC1;
+  --black-color-20:rgba(0, 0, 0, 0.2);
+  --black-color-30:rgba(0, 0, 0, 0.3);
+  --black-color-40:rgba(0, 0, 0, 0.4);
+  --black-color-50:rgba(0, 0, 0, 0.5);
+  --black-color-60:rgba(0, 0, 0, 0.6);
+  --black-color-70:rgba(0, 0, 0, 0.7);
+  --black-color-80:rgba(0, 0, 0, 0.8);
+  --black-color-90:rgba(0, 0, 0, 0.9);
+  --main-bg-color: #0c2a40;
   --main-bg-color-light : #9DBDBA;
   --main-text-active-color : #EC6A52;
   --google-button-color:#366bc2;
@@ -50,7 +58,7 @@ padding: 0px;
 .hero {
   position: relative;
   height: 100vh;
-  background-image: url("../src/assets/images/background.png");
+  background-image: url("../src/assets/images/background.jpg");
   background-size :cover;
   background-repeat:   no-repeat;
 }
@@ -70,17 +78,20 @@ text-transform: uppercase;
 letter-spacing: 1px;
 color: var(--text-color-dark) ;
 }
+nav .nav-item a.nav-link:hover{
+font-weight: 400;
+}
 .active{
   color: var(--main-text-active-color) !important;
 }
 .text-section{
   width: 100%;
 }
-  .container{
+.container{
     display: flex;
 }
 #hero{
-  background : linear-gradient(var(--black-color-10),var(--black-color-10)),url("../src/assets/images/background.png");
+  background : linear-gradient(var(--black-color-40),var(--black-color-40)),url("../src/assets/images/background.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -91,6 +102,7 @@ color: var(--text-color-dark) ;
   justify-content: center;
   align-items: center;
   text-align: center;
+  overflow: hidden;
 }
 .icon_section span{
 color: var(--text-color);
@@ -108,11 +120,12 @@ text-transform: capitalize;
   border-radius: 100px;
   background-color: var(--main-bg-color);
   margin-top: 30px;
+  overflow: hidden;
 } 
 
 .icon_image{
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
 .logo_section{
 display: flex;
@@ -229,4 +242,53 @@ margin-right: 10px;
 }
 .me-2 {
   margin-right: .5rem!important;
+}
+.mechanis-section{
+  display: flex;
+  align-items: center;
+}
+.profil-section{
+  display: flex;
+}
+.profil-body{
+  display: flex;
+  justify-items: auto;
+  align-items: center;
+  margin: auto;
+  padding: 20px;
+}
+.profil-section img{
+  border: 4px solid #e1e1e1;
+  border-radius: 200px;
+}
+.profil-section span{
+margin-left: 10px;
+}
+.profil-text-body{
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  margin-left: 10px;
+}
+.profil-text-section{
+  align-items: center;
+  align-self: center;
+}
+.profil-text-section div{
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 425px) {
+  .main-title {
+    margin-left:0px;
+    text-align: center;
+  }
+  .sub-title{
+    margin-left: 0px;
+    text-align: center;
+  }
+  .mechanis-section{
+    display: none;
+  }
 }
