--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -11,30 +11,32 @@
   font-family: "Lexend", system-ui;
   transition: 0.2 ease;
 }
-:root{
-  --main-color:#66CBFF;
-  --white-color:#ffffff;
-  --black-color:#1a1a1a;
-  --black-color-10:rgba(0, 0, 0, 0.1);
-  --black-color-20:rgba(0, 0, 0, 0.2);
-  --black-color-30:rgba(0, 0, 0, 0.3);
-  --black-color-40:rgba(0, 0, 0, 0.4);
-  --black-color-50:rgba(0, 0, 0, 0.5);
-  --black-color-60:rgba(0, 0, 0, 0.6);
-  --black-color-70:rgba(0, 0, 0, 0.7);
-  --black-color-80:rgba(0, 0, 0, 0.8);
-  --black-color-90:rgba(0, 0, 0, 0.9);
-  --main-bg-color: #0c2a40;
-  --main-bg-color-light : #9DBDBA;
-  --main-text-active-color : #EC6A52;
-  --google-button-color:#366bc2;
-  --text-color : #CFCFCF;
-  --text-color-dark : #454545;
-  --border : 0.1rem solid rgba(255,255,255,0)
+
+:root {
+  --main-color: #66CBFF;
+  --white-color: #ffffff;
+  --black-color: #1a1a1a;
+  --black-color-10: rgba(0, 0, 0, 0.1);
+  --black-color-20: rgba(0, 0, 0, 0.2);
+  --black-color-30: rgba(0, 0, 0, 0.3);
+  --black-color-40: rgba(0, 0, 0, 0.4);
+  --black-color-50: rgba(0, 0, 0, 0.5);
+  --black-color-60: rgba(0, 0, 0, 0.6);
+  --black-color-70: rgba(0, 0, 0, 0.7);
+  --black-color-80: rgba(0, 0, 0, 0.8);
+  --black-color-90: rgba(0, 0, 0, 0.9);
+  --main-header-color: #0c2a40;
+  --main-bg-color-light: #9DBDBA;
+  --main-text-active-color: #EC6A52;
+  --google-button-color: #366bc2;
+  --text-color: #CFCFCF;
+  --text-color-dark: #454545;
+  --border: 0.1rem solid rgba(255, 255, 255, 0)
 }
-html{
+
+html {
   overflow-x: hidden;
-  scroll-padding-top: 9rem ;
+  scroll-padding-top: 9rem;
   scroll-behavior: smooth;
 }
 
@@ -44,59 +46,76 @@ body {
   margin: 0;
 
 }
-h1,h2,h3,h4,h5,
-.h1,.h2,.h3,.h4,.h5{
-font-weight: 600;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5 {
+  font-weight: 600;
 }
 
-.section{
-width: 100%;
-margin-left: 0px;
-margin-right: 0;
-padding: 0px;
+.section {
+  width: 100%;
+  margin-left: 0px;
+  margin-right: 0;
+  padding: 0px;
 }
+
 .hero {
   position: relative;
   height: 100vh;
   background-image: url("../src/assets/images/background.jpg");
-  background-size :cover;
-  background-repeat:   no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.navbar{
+.navbar {
   border-bottom: 1px solid var(--black-color-10);
-  background-color: var(--main-bg-color);
+  background-color: var(--main-header-color);
 }
-.navbar .navbar-brand{
-height: 50xp
+
+.navbar .navbar-brand {
+  height: 50xp
 }
+
 nav .nav-link {
-font-size: 1rem;
-font-style: normal;
-font-weight: 300;
-text-transform: uppercase;
-letter-spacing: 1px;
-color: var(--text-color-dark) ;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--text-color-dark);
 }
-nav .nav-item a.nav-link:hover{
-font-weight: 400;
+
+nav .nav-item a.nav-link:hover {
+  font-weight: 400;
 }
-.active{
+
+.active {
   color: var(--main-text-active-color) !important;
 }
-.text-section{
+
+.text-section {
   width: 100%;
 }
-.container{
-    display: flex;
+
+.container {
+  display: flex;
 }
-#hero{
-  background : linear-gradient(var(--black-color-40),var(--black-color-40)),url("../src/assets/images/background.jpg");
+
+#hero {
+  background: linear-gradient(var(--black-color-40), var(--black-color-40)), url("../src/assets/images/background.jpg");
   background-position: center;
   background-size: cover;
 }
 
-.icon_section{
+.icon_section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -104,71 +123,89 @@ font-weight: 400;
   text-align: center;
   overflow: hidden;
 }
-.icon_section span{
-color: var(--text-color);
-font-size: 12px;
-text-transform: capitalize;
+
+.icon_section span {
+  color: var(--text-color);
+  font-size: 12px;
+  text-transform: capitalize;
 
 }
-.icon_box{
+
+.icon_box {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 150px;
   height: 150px;
-  border:2px solid var(--main-text-active-color);
+  border: 2px solid var(--main-text-active-color);
   border-radius: 100px;
   background-color: var(--main-bg-color);
   margin-top: 30px;
   overflow: hidden;
-} 
+}
 
-.icon_image{
+.icon_image {
   width: 200px;
   height: 200px;
 }
-.logo_section{
-display: flex;
-justify-content: center;
-align-items: center;
-margin: auto;
-height: 100%;
+
+.logo_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  height: 100%;
 }
-.text-section{
+
+.text-section {
   margin-top: 1rem;
 }
-.sub-title{
-font-size: 24px;
-font-weight: 200;
-text-transform: lowercase;
-text-align: start;
-margin-left: 90px;
+
+.sub-title {
+  font-size: 24px;
+  font-weight: 200;
+  text-transform: lowercase;
+  text-align: start;
+  margin-left: 90px;
 }
-.main-title{
+
+.main-title {
   font-size: 40px;
   font-weight: 900;
   text-align: start;
   margin-left: 90px;
 }
-.main-description{
+
+.main-description {
   text-align: justify;
 }
-.btn-google{
-  display: flex; /* Flexbox kullanımı */
-  align-items: center; /* Dikeyde ortalar */
-  justify-content: center; /* Yatayda ortalar */
-  padding: 10px; /* Butona biraz iç boşluk ekler */
-  border: none; /* Butonun kenarlıklarını kaldırır */
-  background-color: var(--google-button-color); /* Google mavi rengi */
-  color: var(--white-color); /* Yazı rengini beyaz yapar */
-  cursor: pointer; /* İmleci el işaretine dönüştürür */
+
+.btn-google {
+  display: flex;
+  /* Flexbox kullanımı */
+  align-items: center;
+  /* Dikeyde ortalar */
+  justify-content: center;
+  /* Yatayda ortalar */
+  padding: 10px;
+  /* Butona biraz iç boşluk ekler */
+  border: none;
+  /* Butonun kenarlıklarını kaldırır */
+  background-color: var(--google-button-color);
+  /* Google mavi rengi */
+  color: var(--white-color);
+  /* Yazı rengini beyaz yapar */
+  cursor: pointer;
+  /* İmleci el işaretine dönüştürür */
 }
-.btn-google-icon{
-width: 30px;
-height: 30px;
-margin-right: 10px;
+
+.btn-google-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
 }
-.btn-google-text{
+
+.btn-google-text {
   text-align: center;
   margin: auto;
 }
@@ -200,6 +237,7 @@ margin-right: 10px;
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -232,7 +270,8 @@ margin-right: 10px;
   margin-bottom: 1.5rem;
   box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
 }
-.main-body{
+
+.main-body {
   display: flex;
   justify-items: auto;
   align-items: center;
@@ -240,55 +279,159 @@ margin-right: 10px;
   padding: 20px;
   height: 100vh;
 }
+
 .me-2 {
-  margin-right: .5rem!important;
+  margin-right: .5rem !important;
 }
-.mechanis-section{
+
+.mechanis-section {
   display: flex;
   align-items: center;
 }
-.profil-section{
+
+.profil-section {
   display: flex;
 }
-.profil-body{
+
+.profil-body {
   display: flex;
   justify-items: auto;
   align-items: center;
   margin: auto;
   padding: 20px;
 }
-.profil-section img{
+
+.profil-section img {
   border: 4px solid #e1e1e1;
   border-radius: 200px;
 }
-.profil-section span{
-margin-left: 10px;
+
+.profil-section span {
+  margin-left: 10px;
 }
-.profil-text-body{
+
+.profil-text-body {
   display: flex;
   margin: auto;
   flex-direction: column;
   margin-left: 10px;
 }
-.profil-text-section{
+
+.profil-text-section {
   align-items: center;
   align-self: center;
 }
-.profil-text-section div{
+
+.profil-text-section div {
   text-align: center;
   margin-bottom: 10px;
 }
 
+
+.footer-section {
+  display: fixed;
+  bottom: 0;
+  width: 100%;
+  background: var(--main-bg-color);
+  color: #fff
+}
+
+.flex-row-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.abouth-section-img {
+  width: 50%;
+  height: 100vh;
+  background-color: #366bc2;
+  background: url("./assets/images/abouth-background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.contact-img-section {
+  width: 50%;
+  height: 100vh;
+  background-color: #366bc2;
+  background: url("./assets/images/contact-background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+.contact-form-section{
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 60%;
+  height: 100vh;
+  background-color: var(--main-bg-color-light);
+}
+.contact-img-section {
+  width: 40%;
+  height: 100vh;
+  overflow: hidden;
+}
+.contact-img-section img {
+  height: 100%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  translate: -600px; ;
+
+}
+.abouth-section-description {
+  width: 50%;
+  height: 100vh;
+  background-color: var(--main-text-active-color);
+}
+
+.abouth-description-content {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.abouth-description-text {
+  text-align: justify;
+}
+
+.icon-content{
+  display: flex;
+  margin: auto;
+  justify-items: center;
+  align-items: center;
+
+}
+.icon-content a{
+  width: 100%;
+}
+.icon-content a.center{
+  text-align: center;
+}
+.icon-content a.left{
+  text-align: left;
+}
+.icon-content a.right{
+  text-align: right;
+}
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
 @media only screen and (max-width: 425px) {
   .main-title {
-    margin-left:0px;
-    text-align: center;
-  }
-  .sub-title{
     margin-left: 0px;
     text-align: center;
   }
-  .mechanis-section{
+
+  .sub-title {
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  .mechanis-section {
     display: none;
   }
 }
