--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -420,6 +420,12 @@ nav .nav-item a.nav-link:hover {
   align-items: center;
   margin-top: 100px;
 }
+.or-text-content{
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  height: 100%;
+}
 @media only screen and (max-width: 425px) {
   .main-title {
     margin-left: 0px;
